--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
         <link rel="manifest"
               href="%PUBLIC_URL%/manifest.json" />
         <title>Kyo Flow</title>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+
+        </style>
     </head>
 
     <body>
